Added some documentation to ML notebook

--- a/notebooks/Supervised Learning using CNLR COREs.html
+++ b/notebooks/Supervised Learning using CNLR COREs.html
@@ -11913,6 +11913,19 @@ div#notebook {
 </div>
 
 </div>
+<div class="cell border-box-sizing text_cell rendered">
+<div class="prompt input_prompt">
+</div>
+<div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<h3 id="Preprocess/Transform-input-training-matrix">Preprocess/Transform input training matrix<a class="anchor-link" href="#Preprocess/Transform-input-training-matrix">&#182;</a></h3><ul>
+<li>Impute NaN values using the median of the column</li>
+<li>Standardize all values</li>
+</ul>
+
+</div>
+</div>
+</div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
 <div class="prompt input_prompt">In&nbsp;[18]:</div>
@@ -12028,6 +12041,15 @@ div#notebook {
 </div>
 </div>
 
+</div>
+<div class="cell border-box-sizing text_cell rendered">
+<div class="prompt input_prompt">
+</div>
+<div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<h2 id="Visualize-ML-Results">Visualize ML Results<a class="anchor-link" href="#Visualize-ML-Results">&#182;</a></h2>
+</div>
+</div>
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
