ML refactoring - parallelized CNprep on interactive script
-Need to also modify the CNprep scripts on HPC

--- a/notebooks/Compare CNPrep Runs.html
+++ b/notebooks/Compare CNPrep Runs.html
@@ -11768,7 +11768,7 @@ div#notebook {
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[2]:</div>
+<div class="prompt input_prompt">In&nbsp;[4]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-r"><pre><span></span><span class="c1">#</span>
@@ -11841,7 +11841,7 @@ supplementary_cols <span class="o">&lt;-</span> brewer.pal<span class="p">(</spa
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[7]:</div>
+<div class="prompt input_prompt">In&nbsp;[3]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-r"><pre><span></span><span class="kp">print</span><span class="p">(</span>all_model_specs<span class="p">)</span>
@@ -11857,20 +11857,29 @@ supplementary_cols <span class="o">&lt;-</span> brewer.pal<span class="p">(</spa
 
 <div class="output_area"><div class="prompt"></div>
 <div class="output_subarea output_stream output_stdout output_text">
-<pre>                     dir model minjoin ntrial
-1              prev_run1     E    0.25     10
-2              prev_run3     V    0.25     10
-3  prev_run_7_15_2018_14     E    0.25     40
-4  prev_run_7_15_2018_15     E    0.25     10
-5  prev_run_7_15_2018_16     V    0.25     10
-6  prev_run_7_15_2018_17     E    0.01     10
-7  prev_run_7_15_2018_18     V    0.01     10
-8  prev_run_7_15_2018_19     E    0.01     50
-9  prev_run_7_15_2018_18     V    0.01     50
-10 prev_run_7_15_2018_18     V    0.01     50
-11  prev_run_7_19_2018_1     E    0.50     40
-12  prev_run_7_19_2018_2     E    1.00     40
-13  prev_run_7_19_2018_3     V    1.00     10
+<pre>                           dir model minjoin ntrial
+1                    prev_run1     E    0.25     10
+2                    prev_run3     V    0.25     10
+3        prev_run_7_15_2018_14     E    0.25     40
+4        prev_run_7_15_2018_15     E    0.25     10
+5        prev_run_7_15_2018_16     V    0.25     10
+6        prev_run_7_15_2018_17     E    0.01     10
+7        prev_run_7_15_2018_18     V    0.01     10
+8        prev_run_7_15_2018_19     E    0.01     50
+9        prev_run_7_15_2018_18     V    0.01     50
+10       prev_run_7_15_2018_18     V    0.01     50
+11        prev_run_7_19_2018_1     E    0.50     40
+12        prev_run_7_19_2018_2     E    1.00     40
+13        prev_run_7_19_2018_3     V    1.00     10
+14        prev_run_7_27_2018_3     E    0.25     10
+15        prev_run_7_27_2018_4     E    0.25     10
+16        prev_run_7_27_2018_8     E    0.25     10
+17 cnvkit_prev_run_7_30_2018_1     E    0.25     10
+18 cnvkit_prev_run_7_30_2018_2     E    0.50     10
+19 cnvkit_prev_run_7_30_2018_3     E    1.00     10
+20 cnvkit_prev_run_7_30_2018_4     V    0.25     10
+21 cnvkit_prev_run_7_30_2018_5     V    0.50     10
+22 cnvkit_prev_run_7_30_2018_6     V    1.00     10
 </pre>
 </div>
 </div>
